src/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --accent-color: rgb(252, 163, 17);
}

/* sidebar navigation */
h1 {
    color: white;
    border-bottom: 2px solid var(--accent-color);
    padding-bottom: 1rem;
}

.sidebar {
    background: black;
    width: 33%;
    height: 100vh;
    padding: 1rem;
}

/* nav items */
ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding-top: 25px;
}

.nav-item {
    color: white;
    display: flex;
    align-items: center;
    gap: 0.2rem;
    font-size: 1.2rem;
    cursor: pointer;
}

.nav-item img {
    width: 25px;
    height: 25px;
}

/* media queries */
@media screen and (min-width: 769px) {

}

